--- a/service.html
+++ b/service.html
@@ -272,14 +272,14 @@
                     <div class="px-4 pb-0">
                         <h4>Cleaning</h4>
                         <p>Rely on our eco-friendly cleaning for a spotless, safe space!</p>
-                    </div>
-                </div>
-        </div>
+                       </div>
+                   </div>
+              </div>
+         </div>
     </div>
 </div>
-<!-- Blog End -->
-            
-                <!-- Footer Start -->
+<!-- D End -->
+        <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
                 <div class="row g-4 footer-inner">
