--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="project.html" class="nav-item nav-link">Licence</a>
+                        <a href="brisklicence.html" class="nav-item nav-link">Licence</a>
                         <a href="service.html" class="nav-item nav-link">Services</a>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
@@ -71,7 +71,6 @@
         </div>
     </div>
         <!-- Navbar End -->
-
 
         
         <!-- Page Header Start -->
