--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay=".4s">
                     <h5 class="mb-4">Get In Touch</h5>
-                    <form id="contact-form" method="post" action="contact.php">
+                    <form id="contact-form" method="post" action="error.html">
                         <div class="form-group mb-3">
                             <input type="text" class="form-control rounded-pill" id="name" name="name" placeholder="Name" required="">
                         </div>
