--- a/error.html
+++ b/error.html
@@ -72,6 +72,23 @@
     </div>
         <!-- Navbar End -->
 
+     <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.3s">
+    <div class="container text-center py-5">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
+                <!-- <h1 class="display-1">404</h1>
+                <h1 class="mb-4">Page Not Found</h1>
+                <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
+                <a class="btn btn-primary rounded-pill py-3 px-5" href="https://briskpestmanagementservices.github.io/index.html">Go Home</a> -->
+                <h1 class="mb-4">Due to some technical issue,</h1>
+                <p class="mb-4">We are facing some errors at the moment. Please try again later.</p>
+                <p>If you need immediate assistance, please c <a href="tel:+919900102056">Call Us</a></p>
+            </div>
+        </div>
+    </div>
+</div>
+
   <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
@@ -126,25 +143,6 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
             </div>
         </div>
         <!-- Footer End -->
-
-          <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.3s">
-    <div class="container text-center py-5">
-        <div class="row justify-content-center">
-            <div class="col-lg-6">
-                <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                <!-- <h1 class="display-1">404</h1>
-                <h1 class="mb-4">Page Not Found</h1>
-                <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
-                <a class="btn btn-primary rounded-pill py-3 px-5" href="https://briskpestmanagementservices.github.io/index.html">Go Home</a> -->
-                <h1 class="mb-4">Due to some technical issue,</h1>
-                <p class="mb-4">We are facing some errors at the moment. Please try again later.</p>
-                <p>If you need immediate assistance, please call us at <a href="tel:+919900102056">+91 99001 02056</a></p>
-            </div>
-        </div>
-    </div>
-</div>
-
-
 
         <!-- Copyright Start -->
         <div class="container-fluid copyright bg-dark py-4">
