--- a/briskcockroach.html
+++ b/briskcockroach.html
@@ -109,11 +109,7 @@
     </div>
 </div>
 
-        
-        
-
-
-        <!-- Footer Start -->
+     <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
                 <div class="row g-4 footer-inner">
@@ -132,7 +128,7 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                                 <a class="btn btn-link ps-0" href="about.html"><i class="fa fa-check me-2"></i>About Us</a>
                                 <a class="btn btn-link ps-0" href="contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
                                 <a class="btn btn-link ps-0" href="service.html"><i class="fa fa-check me-2"></i>Our Services</a>
-                                <a class="btn btn-link ps-0" href="project.html"><i class="fa fa-check me-2"></i>Licence</a>
+                                <a class="btn btn-link ps-0" href="brisklicence.html"><i class="fa fa-check me-2"></i>Licence</a>
                             </div>
                         </div>
                     </div>
@@ -209,5 +205,3 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
 
 </html>
 </html>
-
-
