--- a/error.html
+++ b/error.html
@@ -89,7 +89,7 @@
     </div>
 </div>
 
-  <!-- Footer Start -->
+   <!-- Footer Start -->
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
             <div class="container py-5">
                 <div class="row g-4 footer-inner">
@@ -105,10 +105,10 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                         <div class="footer-item">
                             <h4 class="text-white fw-bold mb-4">Usefull Link</h4>
                             <div class="d-flex flex-column align-items-start">
-                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/about.html"><i class="fa fa-check me-2"></i>About Us</a>
-                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
-                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/service.html"><i class="fa fa-check me-2"></i>Our Services</a>
-                                <a class="btn btn-link ps-0" href="https://briskpestmanagementservices.github.io/project.html"><i class="fa fa-check me-2"></i>Licence</a>
+                                <a class="btn btn-link ps-0" href="about.html"><i class="fa fa-check me-2"></i>About Us</a>
+                                <a class="btn btn-link ps-0" href="contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
+                                <a class="btn btn-link ps-0" href="service.html"><i class="fa fa-check me-2"></i>Our Services</a>
+                                <a class="btn btn-link ps-0" href="brisklicence.html"><i class="fa fa-check me-2"></i>Licence</a>
                             </div>
                         </div>
                     </div>
@@ -144,42 +144,44 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
         </div>
         <!-- Footer End -->
 
+
+
         <!-- Copyright Start -->
-        <div class="container-fluid copyright bg-dark py-4">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                        <h1 class="text-primary mb-0 display-5" style="font-size: 1rem; @media (max-width: 584px) { font-size: 1.5rem; }">BRISK<span class="text-white">GROUP OF COMPANIES</span><i class=""></i></h1>
-                    </div>
-                    <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
-                        <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-4"><i class="fab fa-facebook-f text-dark"></i></a>
-                        <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-4"><i class="fab fa-instagram text-dark"></i></a>
-                        <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-dark"></i></a>
-                    </div>
-                    <div class="col-md-4 my-auto text-center text-md-end text-white">
-                        Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a>
-                    </div>
-                </div>
+<div class="container-fluid copyright py-4" style="background-color: rgba(0, 0, 0, 0);"> <!-- Set background color to transparent black -->
+    <div class="container-xl"> <!-- Changed to container-xl for extra-large width -->
+        <div class="row">
+            <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                <h1 class="text-primary mb-0 display-5" style="font-size: 1.2rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span></h1> <!-- Adjusted font-size -->
+            </div>
+            <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
+                <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-2 me-md-4"><i class="fab fa-facebook-f text-white"></i>facebook</a>
+                <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-2 me-md-4"><i class="fab fa-instagram text-white"></i>instagram</a>
+                <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-white"></i>linkedin</a>
+            </div>
+            <div class="col-md-4 my-auto text-center text-md-end text-white">
+                <p class="mb-0" style="font-size: 0.9rem;">Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a></p> <!-- Adjusted font-size -->
             </div>
         </div>
-        <!-- Copyright End -->
+    </div>
+</div>
+<!-- Copyright End -->
         
 
         <!-- Back to Top -->
-        <a href="#" class="btn btn-primary rounded-circle border-3 back-to-top"><i class="fa fa-arrow-up"></i></a>
+       <a href="#" class="btn btn-primary rounded-circle border-3 back-to-top"><i class="fa fa-arrow-up"></i></a>
 
-        
-        <!-- JavaScript Libraries -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="lib/wow/wow.min.js"></script>
-        <script src="lib/easing/easing.min.js"></script>
-        <script src="lib/waypoints/waypoints.min.js"></script>
-        <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <!-- JavaScript Libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-        <!-- Template Javascript -->
-        <script src="js/main.js"></script>
-    </body>
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
+</body>
 
+</html>
 </html>
