--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="First slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
-                                <h4 class="text-white mb-4 animated slideInDown">No 1 Pest Control Services</h4>
+                                <h4 class="text-white mb-4 animated slideInDown">Pest Control Services</h4>
                                 <h1 class="text-white display-1 mb-4 animated slideInDown">Enjoy Your Home Totally Pest Free</h1>
                             </div>
                         </div>
@@ -94,7 +94,7 @@
                         <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Second slide">
                         <div class="carousel-caption">
                             <div class="container carousel-content">
-                                <h4 class="text-white mb-4 animated slideInDown">No 1 Pest Control Services</h4>
+                                <h4 class="text-white mb-4 animated slideInDown">Pest Control Services</h4>
                                 <h1 class="text-white display-1 mb-4 animated slideInDown">Enjoy Your Home Totally Pest Free</h1>
                             </div>
                         </div>
@@ -118,7 +118,7 @@
 </head>
 <body>
         <div align="center">
-        <img src="BriskSrcFolder/BriskImages/BriskWelcomeJPNagar.png" alt="Brisk Pest Control" length="120", width="100%">
+        <img src="BriskSrcFolder/BriskImages/briskmaruthi.png" alt="Brisk Pest Control" length="120", width="100%">
       </div>
     </div>
   </div>
