--- a/contact.html
+++ b/contact.html
@@ -101,18 +101,18 @@
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay=".4s">
                     <h5 class="mb-4">Get In Touch</h5>
-                    <form id="contact-form" method="post" action="send_email.php">
+                    <form action="https://formspree.io/f/mpzvjprk" method="POST">
                         <div class="form-group mb-3">
-                            <input type="text" class="form-control rounded-pill" id="name" name="name" placeholder="Name" required="">
+                            <input type="text" class="form-control rounded-pill" name="name" placeholder="Name" required="">
                         </div>
                         <div class="form-group mb-3">
-                            <input type="email" class="form-control rounded-pill" id="email" name="email" placeholder="Email" required="">
+                            <input type="email" class="form-control rounded-pill" name="_replyto" placeholder="Email" required="">
                         </div>
                         <div class="form-group mb-3">
-                            <input type="text" class="form-control rounded-pill" id="subject" name="subject" placeholder="Subject" required="">
+                            <input type="text" class="form-control rounded-pill" name="subject" placeholder="Subject" required="">
                         </div>
                         <div class="form-group mb-3">
-                            <textarea class="form-control rounded" id="message" name="message" rows="5" placeholder="Message" required=""></textarea>
+                            <textarea class="form-control rounded" name="message" rows="5" placeholder="Message" required=""></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary rounded-pill">Send Message</button>
                     </form>
@@ -123,87 +123,110 @@
     <!-- Contact Section End -->
 
     <!-- Footer Start -->
-    <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
-        <div class="container py-5">
-            <div class="row g-4 footer-inner">
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-white fw-bold mb-4">About brisk</h4>
-                        <p>Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
-                            Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
-                        <p class="mb-0"><a class="" href="#">brisk </a> &copy; 2023 All Right Reserved.</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-white fw-bold mb-4">Useful Links</h4>
-                        <div class="d-flex flex-column align-items-start">
-                            <a class="btn btn-link ps-0" href="about.html"><i class="fa fa-check me-2"></i>About Us</a>
-                            <a class="btn btn-link ps-0" href="contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
-                            <a class="btn btn-link ps-0" href="service.html"><i class="fa fa-check me-2"></i>Our Services</a>
-                            <a class="btn btn-link ps-0" href="project.html"><i class="fa fa-check me-2"></i>Licence</a>
+        <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay=".3s">
+            <div class="container py-5">
+                <div class="row g-4 footer-inner">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-item">
+                            <h4 class="text-white fw-bold mb-4">About brisk</h4>
+                            <p>Brisk Pest Management Service  - We are one of India's leading pest control organizations. We organize pest control services throughout India. As a pest control company improving the environment is our business, and we always seek to do it in the most sustainable way.
+Brisk Pest Management Service has provided Pest Management and Control Service are House Keeping, Catering Services, Utility Services, Garden Maintenance, Pool Maintenance, STP WTP Maintenance, Jet Washing, Bulk Rubbish and Waste Removal, and Man Power Supply.</p>
+                            <p class="mb-0"><a class="" href="#">brisk </a> &copy; 2023 All Right Reserved.</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-white fw-bold mb-4">Services Links</h4>
-                        <div class="d-flex flex-column align-items-start">
-                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Rodent Control</a>
-                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Mosquito Control</a>
-                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Bed Bug Control</a>
-                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>WASP control</a>
-                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Ants Treatment</a>
-                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Cockroach Control</a>
-                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Fly Control</a>
-                            <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Honey Bee Removal</a>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-item">
+                            <h4 class="text-white fw-bold mb-4">Usefull Link</h4>
+                            <div class="d-flex flex-column align-items-start">
+                                <a class="btn btn-link ps-0" href="about.html"><i class="fa fa-check me-2"></i>About Us</a>
+                                <a class="btn btn-link ps-0" href="contact.html"><i class="fa fa-check me-2"></i>Contact Us</a>
+                                <a class="btn btn-link ps-0" href="service.html"><i class="fa fa-check me-2"></i>Our Services</a>
+                                <a class="btn btn-link ps-0" href="project.html"><i class="fa fa-check me-2"></i>Licence</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <div class="footer-item">
-                        <h4 class="text-white fw-bold mb-4">Contact Us</h4>
-                        <div class="d-flex flex-column align-items-start">
-                            <a class="btn btn-link ps-0" href="tel:+919900102056"><i class="fa fa-check me-2"></i>📞Call Us</a>
-                            <a class="btn btn-link ps-0" href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8"><i class="fa fa-check me-2"></i>📍Location</a>
-                            <a class="btn btn-link ps-0" href="mailto:info.briskpestmanagement@gmail.com"><i class="fa fa-check me-2"></i>📧Mail Us</a>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-item">
+                            <h4 class="text-white fw-bold mb-4">Services Link</h4>
+                            <div class="d-flex flex-column align-items-start">
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Rodent Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Mosquito Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Bed Bug Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>WASP control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Ants Treatment</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Cockroach Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Fly Control</a>
+                                <a class="btn btn-link ps-0" href=""><i class="fa fa-check me-2"></i>Honey Bee Removal</a>
+
+
+                            </div>
+                            
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="footer-item">
+                            <h4 class="text-white fw-bold mb-4">Contact Us</h4>
+                            <div class="d-flex flex-column align-items-start">
+                                <a class="btn btn-link ps-0" href="tel:+919900102056"><i class="fa fa-check me-2"></i>рџ“ћCall Us</a>
+                                <a class="btn btn-link ps-0" href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8"><i class="fa fa-check me-2"></i>рџ“ЌLocation</a>
+                                <a class="btn btn-link ps-0" href="mailto:info.briskpestmanagement@gmail.com"><i class="fa fa-check me-2"></i>рџ“§Mail Us</a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- Footer End -->
+        <!-- Footer End -->
 
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4" style="background-color: rgba(0, 0, 0, 0);"> <!-- Set background color to transparent black -->
-        <div class="container-xl"> <!-- Changed to container-xl for extra-large width -->
-            <div class="row">
-                <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                    <h1 class="text-primary mb-0 display-5" style="font-size: 1.2rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span></h1> <!-- Adjusted font-size -->
-                </div>
-                <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
-                    <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-2 me-md-4"><i class="fab fa-facebook-f text-white"></i>facebook</a>
-                    <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2OD" class="me-2 me-md-4"><i class="fab fa-instagram text-white"></i>Instagram</a>
-                </div>
+
+
+        <!-- Copyright Start -->
+<div class="container-fluid copyright py-4" style="background-color: rgba(0, 0, 0, 0);"> <!-- Set background color to transparent black -->
+    <div class="container-xl"> <!-- Changed to container-xl for extra-large width -->
+        <div class="row">
+            <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
+                <h1 class="text-primary mb-0 display-5" style="font-size: 1.2rem;">BRISK<span class="text-white">GROUP OF COMPANIES</span></h1> <!-- Adjusted font-size -->
+            </div>
+            <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
+                <a href="https://www.facebook.com/cssllp?mibextid=LQQJ4d" class="me-2 me-md-4"><i class="fab fa-facebook-f text-white"></i>facebook</a>
+                <a href="https://www.instagram.com/briskpestmanagementservices?igshid=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="me-2 me-md-4"><i class="fab fa-instagram text-white"></i>instagram</a>
+                <a href="https://www.linkedin.com/in/brisk-pest-management-services-924701103?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" class=""><i class="fab fa-linkedin-in text-white"></i>linkedin</a>
+            </div>
+            <div class="col-md-4 my-auto text-center text-md-end text-white">
+                <p class="mb-0" style="font-size: 0.9rem;">Designed By <a class="border-bottom" href="https://instagram.com/sunaif_adkar">sunaif adkar</a></p> <!-- Adjusted font-size -->
             </div>
         </div>
     </div>
-    <!-- Copyright End -->
-
+</div>
+<!-- Copyright End -->
+        
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-primary rounded-circle border-3 back-to-top"><i class="fa fa-arrow-up"></i></a>
     <!-- JavaScript Libraries -->
-    <script src="lib/jquery/jquery.min.js"></script>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="lib/magnific-popup/jquery.magnific-popup.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
+    <script>
+        $(document).ready(function () {
+            $(window).scroll(function () {
+                if ($(this).scrollTop() > 100) {
+                    $('.back-to-top').fadeIn();
+                } else {
+                    $('.back-to-top').fadeOut();
+                }
+            });
+            $('.back-to-top').click(function () {
+                $('html, body').animate({scrollTop: 0}, 800);
+                return false;
+            });
+        });
+    </script>
 </body>
 
 </html>
