--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5">
         <div class="container text-center py-5">
-            <h1 class="display-2 text-white mb-4 animated slideInDown">About</h1>
+            <h1 class="display-2 text-white mb-4 animated slideInDown"></h1>
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb justify-content-center mb-0 animated slideInDown">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
