--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@ Brisk Pest Management Service has provided Pest Management and Control Service a
                             <div class="d-flex flex-column align-items-start">
                                 <a class="btn btn-link ps-0" href="tel:+919900102056"><i class="fa fa-check me-2"></i>📞Call Us</a>
                                 <a class="btn btn-link ps-0" href="https://maps.app.goo.gl/gbEZzrhJtFrYQVbV8"><i class="fa fa-check me-2"></i>📍Location</a>
-                                <a class="btn btn-link ps-0" href="mailto:info.briskpestmanagement@gmail.com"><i class="fa fa-check me-2"></i>📧Mail Us</a>
+                                <a class="btn btn-link ps-0" href="mailto:info@briskgroup.in"><i class="fa fa-check me-2"></i>📧Mail Us</a>
                         </div>
                     </div>
                 </div>
